# droidsound

./: .classpath  .gitignore  AndroidManifest.xml  Extra_Checks.xml  README
jni/: Android.mk  Application.mk
jni/FFT/: Android.mk  FFT.cpp  com_ssb_droidsound_utils_FFT.h  fixedfft.cpp  fixedfft.h
jni/GMEPlugin/: Android.mk  GMEPlugin.cpp  com_ssb_droidsound_plugins_GMEPlugin.h
jni/HivelyPlugin/: Android.mk  HivelyPlugin.cpp  hvl_replay.h
jni/ModPlugin/: Android.mk  ModPlugin.cpp
jni/ModPlugin/modplug/: load_abc.cpp
jni/SC68Plugin/: Android.mk  SC68Plugin.cpp  com_ssb_droidsound_plugins_SC68Plugin.h  config.h  update-from-svn.sh
jni/SC68Plugin/file68/: aclocal.m4  configure.ac
jni/SC68Plugin/file68/data68/: sc68.cfg
jni/SC68Plugin/file68/sc68/: chunk68.h  file68.h  file68_api.h  file68_chk.h  file68_err.h  file68_features.h  file68_ice.h  file68_msg.h  file68_opt.h  file68_ord.h  file68_reg.h  file68_rsc.h  file68_str.h  file68_tag.h  file68_tdb.h  file68_uri.h  file68_vfs.h  file68_vfs_ao.h  file68_vfs_curl.h  file68_vfs_def.h  file68_vfs_fd.h  file68_vfs_file.h  file68_vfs_mem.h  file68_vfs_null.h  file68_vfs_z.h  file68_zip.h  msg68.h
jni/SC68Plugin/file68/scripts/: README-scripts  SSDextract.sh  SSDtunes.sh  extractor.sh  unice.sh
jni/SC68Plugin/file68/src/: endian68.c  error68.c  file68.c  gzip68.c  ice68.c  init68.c  istream68_fd.c  msg68.c  option68.c  registry68.c  replay.inc.h  replay68.c  rsc68.c  string68.c  timedb.inc.h  timedb68.c  uri68.c  vfs68.c  vfs68_ao.c  vfs68_curl.c  vfs68_fd.c  vfs68_file.c  vfs68_mem.c  vfs68_null.c  vfs68_z.c
jni/SC68Plugin/libsc68/: api68.c  conf68.c  configure.ac  libsc68.c  trapfunc.s
jni/SC68Plugin/libsc68/emu68/: assert68.h  cc68.c  cc68.h  crc32.c  emu68.c  emu68.h  emu68_api.h  error68.c  error68.h  excep68.h  getea68.c  inl68_arithmetic.h  inl68_bcd.h  inl68_bitmanip.h  inl68_datamove.h  inl68_exception.h  inl68_logic.h  inl68_progctrl.h  inl68_shifting.h  inl68_systctrl.h  inst68.c  inst68.h  ioplug68.c  ioplug68.h  lines68.c  lines68.h  macro68.h  mem68.c  mem68.h  srdef68.h  struct68.h  type68.h
jni/SC68Plugin/libsc68/emu68/lines/: line0.c  line1.c  line2.c  line3.c  line4.c  line5.c  line6.c  line7.c  line8.c  line9.c  lineA.c  lineB.c  lineC.c  lineD.c  lineE.c  lineF.c  table.c
jni/SC68Plugin/libsc68/io68/: default_option68.h  io68.c  io68.h  io68_api.h  mfp_io.c  mfp_io.h  mfpemul.c  mfpemul.h  mw_io.c  mw_io.h  mwemul.c  mwemul.h  paula_io.c  paula_io.h  paulaemul.c  paulaemul.h  ym_atarist_table.c  ym_blep.c  ym_blep.h  ym_dump.c  ym_dump.h  ym_io.c  ym_linear_table.c  ym_puls.c  ym_puls.h  ymemul.c  ymemul.h  ymout1c5bit.h
jni/SC68Plugin/libsc68/sc68/: conf68.h  mixer68.h  sc68.h  trap68.h
jni/SC68Plugin/unice68/: README  README-unice68  aclocal.m4  configure.ac  depcomp  mdate-sh  stamp-vti  texinfo.tex  unice68.1  unice68.c  unice68.h  unice68.info  unice68_doc.h  unice68_pack.c  unice68_unpack.c  unice68_version.c
jni/SexyPSFPlugin/: Android.mk  SexyPSFPlugin.cpp  com_ssb_droidsound_plugins_SexyPSFPlugin.h
jni/UADEPlugin/: Android.mk  UADEPlugin.cpp
jni/UADEPlugin/uade/: audio.c  newcpu.c  sd-sound-generic.c  simplesupport.c  uade.c  uadeipc.c  uademain.c  unixatomic.c  unixsupport.c
jni/VGMStreamPlugin/: Android.mk  VGMStreamPlugin.cpp  com_ssb_droidsound_plugins_VGMStreamPlugin.h
jni/VGMStreamPlugin/vgmstream/: streamfile.c  streamfile.h  streamtypes.h  util.c  util.h  vgmstream.c  vgmstream.h
jni/VGMStreamPlugin/vgmstream/coding/: acm_decoder.c  acm_decoder.h  adx_decoder.c
jni/VGMStreamPlugin/vgmstream/layout/: Makefile.unix.am  aax_layout.c  bdsp_blocked.c  blocked.c  caf_blocked.c  de2_blocked.c  layout.h  scd_int_layout.c
jni/VGMStreamPlugin/vgmstream/meta/: Makefile.unix.am  fsb.c  meta.h  ogg_vorbis_file.c  ps2_2pfs.c  ps2_hsf.c  ps3_ivag.c  ps3_xvag.c  riff.c  rsd.c  rwsd.c  sqex_scd.c  str_snds.c
jni/VICEPlugin/: Android.mk  VICEPlugin.cpp  config.h  siddefs.h  translate.h  update-from-svn.sh
jni/VICEPlugin/android/: archdep.c  archdep.h
jni/VICEPlugin/overrides/: maincpu.c
jni/VICEPlugin/overrides/monitor/: monitor.c
jni/VICEPlugin/overrides/sounddrv/: sounddummy.c
jni/VICEPlugin/vice/: 6510core.c  65c02core.c  aciacore.c  archapi.h  attach.c  c1541.c  cartconv.c  cartridge.h  catweaselmkiii.h  cbmdos.c  cbmdos.h  cmdline.c  config.h.in~  diskimage.h  gcr.c  gcr.h  h6809regs.h  ioutil.c  ioutil.h  joystick.c  lib.c  lib.h  libm_math.c  machine.c  mainc64cpu.c  maincpu.c  mainviccpu.c  monitor.h  mouse.c  mouse.h  petcat.c  piacore.c  ps2mouse.c  r65c02.h  ram.c  rawfile.c  resources.c  romset.c  snapshot.c  snapshot.h  (+10 more)
jni/VICEPlugin/vice/c128/: c128-resources.c  c128.c  c128cia1.c  c128drive.c  c128meminit.c  functionrom.c  z80.c
jni/VICEPlugin/vice/c64/: c64-resources.c  c64.c  c64cia1.c  c64cia2.c  c64parallel.c  psid.c  vsid-resources.c  vsidstubs.c
jni/VICEPlugin/vice/c64dtv/: c64dtv-resources.c  c64dtv.c
jni/VICEPlugin/vice/cbm2/: cbm2-resources.c  cbm5x0-resources.c  cbm5x0.c
jni/VICEPlugin/vice/core/: ata.c
jni/VICEPlugin/vice/crtc/: crtc.c
jni/VICEPlugin/vice/diskimage/: diskimage.c  fsimage-check.c  fsimage-create.c  fsimage-dxx.c  fsimage-dxx.h  fsimage-gcr.c  fsimage-gcr.h  fsimage-p64.c  fsimage-p64.h  fsimage-probe.c  fsimage.c  rawimage.c  realimage.c
jni/VICEPlugin/vice/drive/: drive-check.c  drive-resources.c  drive-snapshot.c  drive-sound.c  drive-sound.h  drive.c  drive.h  drivecpu.c  drivecpu65c02.c  drivecpu65c02.h  driveimage.c  driverom.c  driverom.h  drivetypes.h  rotation.c
jni/VICEPlugin/vice/fsdevice/: fsdevice-resources.c
jni/VICEPlugin/vice/gfxoutputdrv/: doodledrv.c  gifdrv.c
jni/VICEPlugin/vice/imagecontents/: diskcontents-block.c
jni/VICEPlugin/vice/monitor/: asm.h  asm6809.c  asmR65C02.c  mon_assemble6809.c  mon_assembleR65C02.c  mon_assemblez80.c  mon_breakpoint.c  mon_command.c  mon_disassemble.c  mon_drive.c  (+10 more)
res/layout/: preferences.xml  preferences_about.xml  preferences_database.xml  songinfo_details.xml
res/values/: strings.xml
res/xml/: preferences_audio.xml  preferences_headers.xml
(+189 files in other folders)
